--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html><html><body1 style="color:black;"><body2 style="font-size:25px;">
+<!DOCTYPE html><html><body1 style="color:black;"><body2 style="font-size:50px;">
 <title>Student On Task - Please Be On Task</title>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>>--------------------------------------------------------------------<=>---------------------------------------------------------------------{]>Size_Up_The_Situation<[}--------------------------------------------------------------------<=>---------------------------------------------------------------------<</button></a><br>
-<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <p style="background-color:white;border-color:SaddleBrown;border-style:double;">
-<b style="color:white;">MMMMM- - - - - - - - - - - - --------</b>Date: <b id="Date"></b><br>
-<b style="color:white;">MMMMM- - - - - - - - - - -----</b>Wheather: <b id="Wheather"></b><br>
-<b style="color:white;">MMMMM- - - - - - - - - - - - - - --</b>Health: <b id="Health"></b><br>
-<b style="color:white;">MMMMM- - - - - - - - - - - </b>lb_Of_Food: <b id="Foodlb"></b><br>
-<b style="color:white;">MMMMM- </b>Mile_To_Next_Landmark: <b id="milesLM"></b><br>
-<b style="color:white;">MMMMM- - - - - - - - -</b>Miles_Traveled: <b id="milesD"></b></p>
+<b style="color:white;">MMMMMMMMMMMMMMM- - - - - - - - - - - - --------</b>Date: <b id="Date"></b><br>
+<b style="color:white;">MMMMMMMMMMMMMMM- - - - - - - - - - -----</b>Wheather: <b id="Wheather"></b><br>
+<b style="color:white;">MMMMMMMMMMMMMMM- - - - - - - - - - - - - - --</b>Health: <b id="Health"></b><br>
+<b style="color:white;">MMMMMMMMMMMMMMM- - - - - - - - - - - </b>lb_Of_Food: <b id="Foodlb"></b><br>
+<b style="color:white;">MMMMMMMMMMMMMMM- </b>Mile_To_Next_Landmark: <b id="milesLM"></b><br>
+<b style="color:white;">MMMMMMMMMMMMMMM- - - - - - - - -</b>Miles_Traveled: <b id="milesD"></b></p>
 <script>
 var I = localStorage.getItem("I");
 var Idied = localStorage.getItem("Idied");
