--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -8,7 +8,7 @@
 <b style="color:white;">M</b>Health: <b id="Health"></b><br>
 <b style="color:white;">M</b>lb_Of_Food: <b id="Foodlb"></b><br>
 <b style="color:white;">M</b>Mile_To_Next_Landmark: <b id="milesLM"></b><br>
-<b style="color:white;">MMMMM- -</b>Miles_Traveled: <b id="milesD"></b></p>
+<b style="color:white;">MMMM-- -</b>Miles_Traveled: <b id="milesD"></b></p>
 <script>
 var I = localStorage.getItem("I");
 var Idied = localStorage.getItem("Idied");
