--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -5,7 +5,7 @@
 <p style="background-color:white;border-color:SaddleBrown;border-style:double;">
 <b style="color:white;">M</b>Date: <b id="Date"></b><br>
 <b style="color:white;">M</b>Wheather: <b id="Wheather"></b><br>
-<b style="color:white;">MMMMMMM-----</b>Health: <b id="Health"></b><br>
+<b style="color:white;">MMMMMMMM-----</b>Health: <b id="Health"></b><br>
 <b style="color:white;">MMMMM- - --</b>lb_Of_Food: <b id="Foodlb"></b><br>
 <b style="color:white;">M</b>Mile_To_Next_Landmark: <b id="milesLM"></b><br>
 <b style="color:white;">MMMM----</b>Miles_Traveled: <b id="milesD"></b></p>
