--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -4,7 +4,7 @@
 <br><br><br><br>
 <p style="background-color:white;border-color:SaddleBrown;border-style:double;">
 <b style="color:white;">M</b>Date: <b id="Date"></b><br>
-<b style="color:white;">MMMMMMM - --</b>Wheather: <b id="Wheather"></b><br>
+<b style="color:white;">MMMMMM- - --</b>Wheather: <b id="Wheather"></b><br>
 <b style="color:white;">MMMMMMM--- - -</b>Health: <b id="Health"></b><br>
 <b style="color:white;">MMMMM- - --</b>lb_Of_Food: <b id="Foodlb"></b><br>
 <b style="color:white;">M</b>Mile_To_Next_Landmark: <b id="milesLM"></b><br>
