--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -3,7 +3,7 @@
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>>--------------------------------------------------------------------<=>---------------------------------------------------------------------{]>Size_Up_The_Situation<[}--------------------------------------------------------------------<=>---------------------------------------------------------------------<</button></a><br>
 <br><br><br><br>
 <p style="background-color:white;border-color:SaddleBrown;border-style:double;">
-<b style="color:white;">MMMMMMMM-------</b>Date: <b id="Date"></b><br>
+<b style="color:white;">MMMMMMM--------</b>Date: <b id="Date"></b><br>
 <b style="color:white;">MMMMMM--- --</b>Wheather: <b id="Wheather"></b><br>
 <b style="color:white;">MMMMMMM--- - -</b>Health: <b id="Health"></b><br>
 <b style="color:white;">MMMMM- - --</b>lb_Of_Food: <b id="Foodlb"></b><br>
