--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -3,12 +3,12 @@
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>>--------------------------------------------------------------------<=>---------------------------------------------------------------------{]>Size_Up_The_Situation<[}--------------------------------------------------------------------<=>---------------------------------------------------------------------<</button></a><br>
 <br><br><br><br>
 <p style="background-color:white;border-color:SaddleBrown;border-style:double;">
-<b style="color:white;">MMMMMMMMM --------</b>Date: <b id="Date"></b><br>
-<b style="color:white;">MMMMMMMM--- --</b>Wheather: <b id="Wheather"></b><br>
-<b style="color:white;">MMMMMMMMM--- - -</b>Health: <b id="Health"></b><br>
-<b style="color:white;">MMMMMMM- - --</b>lb_Of_Food: <b id="Foodlb"></b><br>
-<b style="color:white;">MMM</b>Mile_To_Next_Landmark: <b id="milesLM"></b><br>
-<b style="color:white;">MMMMMM----</b>Miles_Traveled: <b id="milesD"></b></p>
+<b style="color:white;">M M MMMMMM --------</b>Date: <b id="Date"></b><br>
+<b style="color:white;">M M MMMMM--- --</b>Wheather: <b id="Wheather"></b><br>
+<b style="color:white;">M M MMMMMM--- - -</b>Health: <b id="Health"></b><br>
+<b style="color:white;">M M MMMM- - --</b>lb_Of_Food: <b id="Foodlb"></b><br>
+<b style="color:white;">M M </b>Mile_To_Next_Landmark: <b id="milesLM"></b><br>
+<b style="color:white;">M M MMM----</b>Miles_Traveled: <b id="milesD"></b></p>
 <script>
 var I = localStorage.getItem("I");
 var Idied = localStorage.getItem("Idied");
