--- a/Gregames/OregonTrail/Segment-Shop.html
+++ b/Gregames/OregonTrail/Segment-Shop.html
@@ -52,7 +52,7 @@ function buyAxel() {
   document.getElementById("$").innerHTML = "money_left" + money;
   localStorage.setItem("money", money);
 }
-function buyTongue() {
+function buyToungue() {
   var Toungues = document.getElementById("box").value;
   localStorage.setItem("Toungues", Toungues + localStorage.getItem("Toungues"));
   var tounguePrice = Toungs * 10;
