--- a/Gregames/OregonTrail/Segment-Shop.html
+++ b/Gregames/OregonTrail/Segment-Shop.html
@@ -11,7 +11,7 @@
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Month"><button>8</button></a> Leave_Store
 <p id="$" style="color:white"></p>
 <script>
-var money = localStorage.getItem("money");
+var money = sessionStorage.getItem("money");
 function buyOx() {
   var Oxen = docment.getElementById("box").value;
   localStorage.setItem("Oxen", Oxen + localStorage.getItem("Oxen"));
