--- a/Gregames/OregonTrail/Segment-Jobs.html
+++ b/Gregames/OregonTrail/Segment-Jobs.html
@@ -26,7 +26,7 @@ function Carpenter() {
   localStorage.setItem("job", 2);
 }
 function Banker() {
-  localStorage.setItem("money", 1600);
+  sessionStorage.setItem("money", 1600);
   localStorage.setItem("job", 1);
 }
 </script></body2></body1></html><script>
