--- a/Gregames/OregonTrail/Segment-Jobs.html
+++ b/Gregames/OregonTrail/Segment-Jobs.html
@@ -7,27 +7,27 @@
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Jobs-Explained"><button>5</button></a> Find_Out_The_Difference_Between_These_Options
 <script>
 function Poverty() {
-  localStorage.setItem("money", 5);
-  localStorage.setItem("Oxen", 2);
-  localStorage.setItem("Foodlb", 10);
-  localStorage.setItem("Clothing", 5);
-  localStorage.setItem("Amo", 300);
-  localStorage.setItem("Axel", 1);
-  localStorage.setItem("Toungue", 1);
-  localStorage.setItem("Wheel", 1);
-  localStorage.setItem("job", 4);
+  sessionStorage.setItem("money", 5);
+  sessionStorage.setItem("Oxen", 2);
+  sessionStorage.setItem("Foodlb", 10);
+  sessionStorage.setItem("Clothing", 5);
+  sessionStorage.setItem("Amo", 300);
+  sessionStorage.setItem("Axel", 1);
+  sessionStorage.setItem("Toungue", 1);
+  sessionStorage.setItem("Wheel", 1);
+  sessionStorage.setItem("job", 4);
 }
 function Farmer() {
-  localStorage.setItem("money", 400);
-  localStorage.setItem("job", 3);
+  sessionStorage.setItem("money", 400);
+  sessionStorage.setItem("job", 3);
 }
 function Carpenter() {
-  localStorage.setItem("money", 800);
-  localStorage.setItem("job", 2);
+  sessionStorage.setItem("money", 800);
+  sessionStorage.setItem("job", 2);
 }
 function Banker() {
   sessionStorage.setItem("money", 1600);
-  localStorage.setItem("job", 1);
+  sessionStorage.setItem("job", 1);
 }
 </script></body2></body1></html><script>
   document.body.style.background = "black";
