--- a/Gregames/OregonTrail/Segment-Month.html
+++ b/Gregames/OregonTrail/Segment-Month.html
@@ -10,60 +10,60 @@
 <body3 popover id="Continue">Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail"><button>Space</buttom></a></body3>
 <script>
 function Febuary() {
-localStorage.setItem("Month", "2");
-localStorage.setItem("Wheather", "cool");
+sessionStorage.setItem("Month", "2");
+sessionStorage.setItem("Wheather", "cool");
 Setup();
 }
 function March() {
-localStorage.setItem("Month", "3");
-localStorage.setItem("Wheather", "cold");
+sessionStorage.setItem("Month", "3");
+sessionStorage.setItem("Wheather", "cold");
 Setup();
 }
 function April() {
-localStorage.setItem("Month", "4");
-localStorage.setItem("Wheather", "cool");
+sessionStorage.setItem("Month", "4");
+sessionStorage.setItem("Wheather", "cool");
 Setup();
 }
 function May() {
-localStorage.setItem("Month", "5");
-localStorage.setItem("Wheather", "warm");
+sessionStorage.setItem("Month", "5");
+sessionStorage.setItem("Wheather", "warm");
 Setup();
 }
 function June() {
-localStorage.setItem("Month", "6");
-localStorage.setItem("Wheather", "rainy");
+sessionStorage.setItem("Month", "6");
+sessionStorage.setItem("Wheather", "rainy");
 Setup();
 }
 function July() {
-localStorage.setItem("Month", "7");
-localStorage.setItem("Wheather", "hot");
+sessionStorage.setItem("Month", "7");
+sessionStorage.setItem("Wheather", "hot");
 Setup();
 }
 function August() {
-localStorage.setItem("Month", "8");
-localStorage.setItem("Wheather", "cool");
+sessionStorage.setItem("Month", "8");
+sessionStorage.setItem("Wheather", "cool");
 Setup();
 }
 function Setup() {
-localStorage.setItem("Day", 1);
-localStorage.setItem("Health", "Good");
-localStorage.setItem("milesD", 0);
-localStorage.setItem("Year", 1848);
-localStorage.setItem("Pace", "steady");
-localStorage.setItem("hr", 8);
-localStorage.setItem("Rations", "filling");
-localStorage.setItem("FPD", 1);
-localStorage.setItem("HealthNum", 500);
-localStorage.setItem("Isick", false);
-localStorage.setItem("Idied", false);
-localStorage.setItem("Wsick", false);
-localStorage.setItem("Wdied", false);
-localStorage.setItem("K1sick", false);
-localStorage.setItem("K1died", false);
-localStorage.setItem("K2sick", false);
-localStorage.setItem("K2died", false);
-localStorage.setItem("K3sick", false);
-localStorage.setItem("K3died", false);
+sessionStorage.setItem("Day", 1);
+sessionStorage.setItem("Health", "Good");
+sessionStorage.setItem("milesD", 0);
+sessionStorage.setItem("Year", 1848);
+sessionStorage.setItem("Pace", "steady");
+sessionStorage.setItem("hr", 8);
+sessionStorage.setItem("Rations", "filling");
+sessionStorage.setItem("FPD", 1);
+sessionStorage.setItem("HealthNum", 500);
+sessionStorage.setItem("Isick", false);
+sessionStorage.setItem("Idied", false);
+sessionStorage.setItem("Wsick", false);
+sessionStorage.setItem("Wdied", false);
+sessionStorage.setItem("K1sick", false);
+sessionStorage.setItem("K1died", false);
+sessionStorage.setItem("K2sick", false);
+sessionStorage.setItem("K2died", false);
+sessionStorage.setItem("K3sick", false);
+sessionStorage.setItem("K3died", false);
 }
 </script></body2></body1></html><script>
   document.body.style.background = "black";
