--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -9,7 +9,7 @@
 <a href=""><button onclick="Day();">7</button></a> Attempt_To_Trade<br>
 <button onclick="Day();" onclick="define();">8</button><b id="lm"></b><br>
 <button onclick="kill();">9</button> Kill_Ox_For_Food
-<body3 popover id="box"><input type="text" id="box"><button onclick="day();">Enter</button></body3><br>
+<body3 popover id="box"><input type="text" id="box"><button onclick="Stop();">Enter</button></body3><br>
 <script>
 var I = sessionStorage.getItem("I");
 var Idied = sessionStorage.getItem("Idied");
@@ -60,15 +60,19 @@ if (milesD = 0) {
 } else {
  document.getElementById('lm').innerHTML = "Hunt_For_Food(Comming_Soon!)";
 }
-function day() {
+function Stop() {
   var Pace = "stoped"
   for(var loop = 0; loop < document.getElementById('box').value; loop++) {
-    Day();
-    Maintain();
+    Run();
   }
 var Pace = sessionStorage.getItem("Pace");
+Maintain();
 }
 function Day() {
+  Run();
+  Maintain();
+}
+function Run() {
   if (Pace == "stoped") {
     if (FPD == 3) {
       HealthNum += 4;
@@ -375,7 +379,6 @@ function Day() {
       }
     }
   }
-Maintain();
 }
 function Maintain() {
   localStorage.setItem("Idied", Idied);
