--- a/Gregames/OregonTrail/Segment-Check-Supplies.html
+++ b/Gregames/OregonTrail/Segment-Check-Supplies.html
@@ -3,21 +3,21 @@
 <p id="Oxen"></p><p id="Foodlb"></p><p id="Clothing"></p><p id="Ammo"></p><p id="Axels"></p><p id="Toungues"></p><p id="Wheels"></p><p id="money"></p><br><br><br><br><br>
 <body3>Press"Space"To_Contune <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Space</button></a></body3>
 <script>
-var money = localStorage.getItem("money");
+var money = sessionStorage.getItem("money");
   document.getElementById('money').innerHTML = "money: " + money;
-var Oxen = localStorage.getItem("Oxen");
+var Oxen = sessionStorage.getItem("Oxen");
   document.getElementById('Oxen').innerHTML = "Oxen: " + Oxen;
-var Foodlb = localStorage.getItem("Foodlb");
+var Foodlb = sessionStorage.getItem("Foodlb");
   document.getElementById('Foodlb').innerHTML = "Pounds_Of_Food:" + Foodlb;
-var Clothing = localStorage.getItem("Clothing");
+var Clothing = sessionStorage.getItem("Clothing");
   document.getElementById('Clothing').innerHTML = "Sets_Of_Clothing:" + Clothing;
-var Ammo = localStorage.getItem("Ammo");
+var Ammo = sessionStorage.getItem("Ammo");
   document.getElementById('Ammo').innerHTML = "Bullets:" + Ammo;
-var Axels = localStorage.getItem("Axels");
+var Axels = sessionStorage.getItem("Axels");
   document.getElementById('Axels').innerHTML = "Wagon_Axels:" + Axels;
-var Toungues = localStorage.getItem("Toungues");
+var Toungues = sessionStorage.getItem("Toungues");
   document.getElementById('Toungues').innerHTML = "Wagon_Toungues:" + Toungues;
-var Wheels = localStorage.getItem("Wheels");
+var Wheels = sessionStorage.getItem("Wheels");
   document.getElementById('Wheels').innerHTML = "Wagon_Wheels:" + Wheels;
 
 </script></body2></body1></html><script>
