--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><body1 style="color:black;"><body2 style="font-size:50px;">
 <title>Student On Task - Please Be On Task</title>
-<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>>--------------------------------------------------------------------<=>---------------------------------------------------------------------{]>Size_Up_The_Situation<[}--------------------------------------------------------------------<=>---------------------------------------------------------------------<</button></a><br>
 <br><br><br><br>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>>--------------------------------------------------------------------<=>---------------------------------------------------------------------{]>Size_Up_The_Situation<[}--------------------------------------------------------------------<=>---------------------------------------------------------------------<</button></a><br>
 <p style="background-color:white;border-color:SaddleBrown;border-style:double;">
 <b style="color:white;">M M MMMMMM --------</b>Date: <b id="Date"></b><br>
 <b style="color:white;">M M MMMMM--- --</b>Wheather: <b id="Wheather"></b><br>
@@ -10,57 +10,54 @@
 <b style="color:white;">M M </b>Mile_To_Next_Landmark: <b id="milesLM"></b><br>
 <b style="color:white;">M M MMM----</b>Miles_Traveled: <b id="milesD"></b></p>
 <script>
-var I = localStorage.getItem("I");
-var Idied = localStorage.getItem("Idied");
-var Isick = localStorage.getItem("Isick");
-var W = localStorage.getItem("W");
-var Wdied = localStorage.getItem("Wdied");
-var Isick = localStorage.getItem("Wsick");
-var K1 = localStorage.getItem("K1");
-var K1died = localStorage.getItem("K1died");
-var K1sick = localStorage.getItem("K1sick");
-var K2 = localStorage.getItem("K2");
-var K2died = localStorage.getItem("K2died");
-var K2sick = localStorage.getItem("k2sick");
-var K3 = localStorage.getItem("K3");
-var K3died = localStorage.getItem("K3died");
-var K3sick = localStorage.getItem("K3sick");
-var job = localStorage.getItem("job");
-var money = localStorage.getItem("money");
-var Oxen = localStorage.getItem("Oxen");
-var Foodlb = localStorage.getItem("Foodlb");
+var I = sessionStorage.getItem("I");
+var Idied = sessionStorage.getItem("Idied");
+var Isick = sessionStorage.getItem("Isick");
+var W = sessionStorage.getItem("W");
+var Wdied = sessionStorage.getItem("Wdied");
+var Isick = sessionStorage.getItem("Wsick");
+var K1 = sessionStorage.getItem("K1");
+var K1died = sessionStorage.getItem("K1died");
+var K1sick = sessionStorage.getItem("K1sick");
+var K2 = sessionStorage.getItem("K2");
+var K2died = sessionStorage.getItem("K2died");
+var K2sick = sessionStorage.getItem("k2sick");
+var K3 = sessionStorage.getItem("K3");
+var K3died = sessionStorage.getItem("K3died");
+var K3sick = sessionStorage.getItem("K3sick");
+var job = sessionStorage.getItem("job");
+var money = sessionStorage.getItem("money");
+var Oxen = sessionStorage.getItem("Oxen");
+var Foodlb = sessionStorage.getItem("Foodlb");
   document.getElementById('Foodlb').innerHTML = Foodlb;
-var Clothing = localStorage.getItem("Clothing");
-var Ammo = localStorage.getItem("Ammo");
-var Axels = localStorage.getItem("Axels");
-var Toungues = localStorage.getItem("Toungues");
-var Wheels = localStorage.getItem("Wheels");
-var Day = localStorage.getItem("Day");
-  document.getElementById('Day').innerHTML = Day;
-var Month = localStorage.getItem("Month");
-  document.getElementById('Month').innerHTML = Month;
-var Year = localStorage.getItem("Year");
-  document.getElementById('Year').innerHTML = Year;
-var Wheather = localStorage.getItem("Wheather");
+var Clothing = sessionStorage.getItem("Clothing");
+var Ammo = sessionStorage.getItem("Ammo");
+var Axels = sessionStorage.getItem("Axels");
+var Toungues = sessionStorage.getItem("Toungues");
+var Wheels = sessionStorage.getItem("Wheels");
+var Day = sessionStorage.getItem("Day");
+var Month = sessionStorage.getItem("Month");
+var Year = sessionStorage.getItem("Year");
+var Wheather = sessionStorage.getItem("Wheather");
   document.getElementById('Wheather').innerHTML = Wheather;
-var Health = localStorage.getItem("Health");
+var Health = sessionStorage.getItem("Health");
   document.getElementById('Health').innerHTML = Health;
-var HealthNum = localStorage.getItem("HealthNum");
+var HealthNum = sessionStorage.getItem("HealthNum");
 var miles2LM = ([num}miles-next-landmark);
   document.getElementById('miles2LM').innerHTML = miles2LM;
-var milesD = localStorage.getItem("milesD");
+var milesD = sessionStorage.getItem("milesD");
   document.getElementById('milesD').innerHTML = milesD;
-var Pace = localStorage.getItem("Pace");
-var hr = localStorage.getItem("hr");
-var Rations = localStorage.getItem("Rations");
-var FPD = localStorage.getItem("FPD");
+var Pace = sessionStorage.getItem("Pace");
+var hr = sessionStorage.getItem("hr");
+var Rations = sessionStorage.getItem("Rations");
+var FPD = sessionStorage.getItem("FPD");
 
 loops.everyInterval(24000, function () {
   for(var loop = 0; loop < hr * 2; loop++) {
     milesD += 1;
     miles2LM -= 1;
     if (milesD = 102) {
-      if (confirm("You Have Reached"))
+      if (confirm("You Have Reached" + Lm +))
     }
   }
   if (Wheather = "cold" && Clothing < 5) {
@@ -184,6 +181,8 @@ loops.everyInterval(24000, function () {
     }
     alert("You_Found_An_Abandened_Wagon");
   }
+  Day();
+  Maintain();
 function Day() {
   if (Pace == "stoped") {
     if (FPD == 3) {
@@ -487,7 +486,6 @@ function Day() {
       }
     }
   }
-Maintain();
 }
 function Maintain() {
   localStorage.setItem("Idied", Idied);
