--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -57,8 +57,11 @@ loops.everyInterval(24000, function () {
     milesD += 1;
     miles2LM -= 1;
     if (milesD = 102) {
-      if (confirm("You Have Reached" + Lm +))
-    }
+      if (confirm("You_Have_Reached_Fort_Kerny.-Would_You_Like_To_Take_A_Gandur?")) {
+        window.location.assign("https://fortkerny");
+      }
+      var milesLM = 
+    } else if (milesD = )
   }
   if (Wheather = "cold" && Clothing < 5) {
     HealthNum += Clothing - 5;
