--- a/Gregames/OregonTrail/Segment-Month.html
+++ b/Gregames/OregonTrail/Segment-Month.html
@@ -54,6 +54,7 @@ sessionStorage.setItem("hr", 8);
 sessionStorage.setItem("Rations", "filling");
 sessionStorage.setItem("FPD", 1);
 sessionStorage.setItem("HealthNum", 500);
+sessionStorage.setItem("milesLM", 102);
 sessionStorage.setItem("Isick", false);
 sessionStorage.setItem("Idied", false);
 sessionStorage.setItem("Wsick", false);
