--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -57,10 +57,10 @@ loops.everyInterval(24000, function () {
     milesD += 1;
     miles2LM -= 1;
     if (milesD = 102) {
-      if (confirm("You_Have_Reached_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gandur?")) {
-        window.location.assign("https://kansisriver");
+      if (confirm("You_Have_Reached_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
+        window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/KansesRiverCrossing.image");
       } else {
-        window.location.assign("https://kasisrivercrossing");
+        window.location.assign("");
       }
       var milesLM = ;
     } else if (milesD = ) {
