--- a/Gregames/OregonTrail/KansesRiverCrossing.html
+++ b/Gregames/OregonTrail/KansesRiverCrossing.html
@@ -5,7 +5,7 @@
 <button onclick="Ford();">1</button> Ford_The_River<br>
 <button onclick="Culk();">2</button> Culk_Your_Wagon_And_Fleat_It_Across<br>
 <button onclick="Fairy();">3</button> Hire_A_Fairy<br>
-<a href=""><button>4</button></a> Find_Out_What_These_Options_Mean<br>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Fording-Explained"><button>4</button></a> Find_Out_What_These_Options_Mean<br>
 <script>
 var I = sessionStorage.getItem("I");
 var Idied = sessionStorage.getItem("Idied");
