--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -59,8 +59,8 @@ loops.everyInterval(24000, function () {
     if (milesD = 102) {
       if (confirm("You_Have_Reached_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/KansesRiverCrossing.image");
-        window.location.assign("");
       }
+      window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/KansesRiverCrossing");
       var milesLM = ;
     } else if (milesD = ) {
       
