--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -60,8 +60,8 @@ loops.everyInterval(24000, function () {
       if (confirm("You_Have_Reached_Kanses_River_Crossing.-Would_You_Like_To_Take_A_Gandure?")) {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/KansesRiverCrossing.image");
       }
+      sessionStorage.setItem("milesLM", 82);
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/KansesRiverCrossing");
-      var milesLM = ;
     } else if (milesD = ) {
       
     }
