--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -61,6 +61,7 @@ loops.everyInterval(24000, function () {
         window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/KansesRiverCrossing.image");
       }
       sessionStorage.setItem("milesLM", 82);
+      sessionStorage.setItem("milesD", milesD + 1);
       window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/KansesRiverCrossing");
     } else if (milesD = ) {
       
